-> Добавлен блок original-posts -> Добавлены пост-картинки

--- a/blocks/page.scss
+++ b/blocks/page.scss
@@ -17,6 +17,11 @@
 @import "menu-link__mark.scss";
 @import "menu-link__label.scss";
 
+@import "original-posts.scss";
+@import "original-posts__content.scss";
+@import "content-block__posts.scss"; 
+@import "post-image.scss";
+
 @import "footer.scss";
 @import "footer__content-block.scss";
 @import "content-block.scss";
