--- a/blocks/page.scss
+++ b/blocks/page.scss
@@ -1,5 +1,6 @@
 @import "page__block.scss";
 @import "main-image.scss";
+@import "trans-subs.scss";
 
 @import "user-profile.scss";
 @import "user-profile__holder.scss";
@@ -14,6 +15,8 @@
 @import "double-holder.scss";
 @import "main-info.scss";
 @import "main-info__link.scss";
+@import "main-subs.scss";
+@import "main-subs__info.scss";
 
 @import "story-highlights.scss";
 @import "story-highlights__story-holder.scss";
