-> Добавлен блок fixed-header -> Добавлен скролинг в story-highlights -> Оптимизирован ввод в блок input

--- a/blocks/original-posts__content.scss
+++ b/blocks/original-posts__content.scss
@@ -3,4 +3,10 @@
 	flex-flow: column nowrap;
 	justify-content: center;
 	margin-bottom: -1.375%;
+
 }  
+@media all and (max-width:400px){
+	.original-posts__content {
+		margin-bottom: 0.75%; 
+	}
+}
