--- a/blocks/post-image.scss
+++ b/blocks/post-image.scss
@@ -2,5 +2,12 @@
 	width: 31.5%;
 	margin-bottom: -3px;
 	padding-bottom: 2.75%;  
+
 }
 
+@media all and (max-width:400px){
+	.post-image {
+		width: 32.5%;
+		padding-bottom: 1.25%; 
+	}
+}
