--- a/blocks/input.scss
+++ b/blocks/input.scss
@@ -2,7 +2,9 @@
 	font-size: 14px;
 	width: 100%;
 	border: none;
+	background-color: #fafafa;
 	background-image: url(../images/h-search.png);
 	background-repeat: no-repeat;
 	background-position: calc(50% - 30px) 50%; 
+	padding: 0px 25px;
 }
