--- a/bundles/project-instagram.css
+++ b/bundles/project-instagram.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .page__block {
   display: flex;
   align-items: stretch;
@@ -59,7 +60,7 @@
   border-radius: 5px;
   cursor: text; }
 
-@media all and (max-width: 600px) {
+@media all and (max-width: 700px) {
   .content-block__h-sides_center {
     display: none; } }
 .content-block__h-sides_right {
@@ -443,5 +444,22 @@ a:focus, a:hover, a:link, a:visited, a:active {
 
 .placeholder-text-left::placeholder {
   text-align: left; }
+
+/*Пасхалка №1*/
+.easter-egg {
+  position: relative;
+  width: 24px;
+  height: 24px; }
+
+.easter-egg__front {
+  position: absolute;
+  z-index: 1;
+  transition: filter 1s ease; }
+
+.easter-egg__back {
+  position: absolute; }
+
+.easter-egg__front:hover {
+  filter: opacity(0); }
 
 /*# sourceMappingURL=project-instagram.css.map */
